# ithelpdeskenv

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  ui.html
server/: app.py
src/: __init__.py  customer_sim.py  env.py  tasks.py
tests/: test_env.py
