[project]
name = "ithelpdeskenv"
version = "1.0.0"
description = "IT Helpdesk OpenEnv — Scaler Hackathon submission"
authors = [{ name = "Hudson Bunga" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.0.0",
    "gradio>=4.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
]

[project.scripts]
it-helpdesk-env = "inference:main"

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
